fix: Apply main-bg color to background of layout container when sidebar is expanded on mobile

--- a/inst/components/scss/sidebar.scss
+++ b/inst/components/scss/sidebar.scss
@@ -378,6 +378,11 @@ $bslib-sidebar-column-sidebar: Min(calc(100% - var(--_padding-icon)), var(--_sid
       &.sidebar-collapsed > .main {
         opacity: 1;
       }
+
+      // Move main bg to layout container
+      &:not(.sidebar-collapsed) {
+        background-color: var(--_main-bg);
+      }
     }
   }
 }
